--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,5 +1,7 @@
-on: push
 name: 🚀 Deploy website on push
+on: 
+    push:
+    branches: [ master ]
 jobs:
   web-deploy:
     name: 🎉 Deploy
@@ -14,4 +16,3 @@ jobs:
         server: ${{ secrets.ftp_server }}
         username: ${{ secrets.ftp_user }}
         password: ${{ secrets.ftp_password }}
-        local_dir: ${{ secrets.ftp_dir }}
