--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,13 +10,10 @@ jobs:
     - name: 🚚 Get latest code
       uses: actions/checkout@v2
     
-    - name: 📂 Sync files
-      uses: SamKirkland/FTP-Deploy-Action@4.3.2
+    - name: 📂 Sync Files
+      uses: SamKirkland/web-deploy@v1
       with:
-        server: ${{ secrets.FTP_SERVER }}
-        username: ${{ secrets.FTP_USER }}
-        password: ${{ secrets.FTP_PASSWORD }}
-        protocol: ftp
-        port: 21
-        log-level: verbose
-        server-dir: inetpub/
+        target-server: ${{ secrets.TARGET_SERVER }}
+        remote-user: ${{ secrets.REMOTE_USERNAME }}
+        private-ssh-key: ${{ secrets.PRIVATE_SSH_KEY }}
+        destination-path: ${{ secrets.DESTINATION_PATH }}
