--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,5 +15,5 @@ jobs:
         SSHKEY: ${{ secrets.PRIVATE_SSH_KEY }} # ----- BEGIN RSA PRIVATE KEY----- ...
         NAME: production
         PORT: 22
-        USER: ${{ secrets.REMOTE_USERNAME }} # admin
+        USER: ${{ secrets.FTP_USER }} # admin
     - run: ssh production ls --help
