--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,18 +6,26 @@ jobs:
     runs-on: windows-latest
     steps:
     - name: 🚚 Get latest code
-      uses: actions/checkout@v2
+      uses: actions/checkout@v3
 
-    - name: Set up .Net Core
-      uses: actions/setup-dotnet@v1
-      with: 
-        dotnet-version: '6.0.x'
-
-    - name: Build with .Net
-      run: dotnet build --configuration Release
-
-    - name: .Net Publish
-      run: dotnet publish -c Release test/myapp
+    - name: Setup .NET
+      uses: actions/setup-dotnet@v3
+      with:
+        dotnet-version: 6.0.x
+    - name: Restore dependencies
+      run: dotnet restore
+    - name: Build
+      run: dotnet build --no-restore
+    - name: Test
+      run: dotnet test --no-build --verbosity normal
+    - name: Publish
+      run: dotnet publish GithubActionsTest/GithubActionsTest.csproj -c Release -o website
+    - name: Upload a Build Artifact
+      uses: actions/upload-artifact@v3
+      with:
+        name: website
+        path: GithubActionsTest/website/**
+        if-no-files-found: error
     
     - name: 📂 Sync files
       uses: SamKirkland/FTP-Deploy-Action@4.3.2
