--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,7 +15,7 @@ jobs:
     - name: Restore dependencies
       run: dotnet restore GithubActionsTest
     - name: Build
-      run: dotnet build --no-restore
+      run: dotnet build GithubActionsTest --no-restore
     - name: Test
       run: dotnet test --no-build --verbosity normal
     - name: Publish
