--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,7 +19,7 @@ jobs:
     - name: Test
       run: dotnet test GithubActionsTest --no-build --verbosity normal
     - name: Publish
-      run: dotnet publish GithubActionsTest.csproj -c Release -o website
+      run: dotnet publish GithubActionsTest -c Release -o website
     - name: Upload a Build Artifact
       uses: actions/upload-artifact@v3
       with:
